working on small bugs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -200,13 +200,6 @@ nav a[href*="sign"]:hover {
 
 
 
-
-
-
-
-
-
-
 /* reader ejs. */
 #readers-selection{
     background-image:url('https://images.unsplash.com/photo-1452421822248-d4c2b47f0c81?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3wzNTg0NzYzfHxlbnwwfHx8fHw%3D');
@@ -306,12 +299,6 @@ a:hover {
 }
  
  
-
-
-
-
-
-
 /* home.ejs page */
 
 .main-containter {
@@ -347,11 +334,58 @@ nav a {
     text-align: center;
 
 }
-nav a:hovver {
+nav a:hover {
     background-color: #e2e6ea;
     color: rgb(68, 0, 255);
 }
+ .welcome-message  {
+    font-size: 2 em;
+    font-weight: bold;
+    color: #512e2e;
+    padding: 20px;
+    margin-top: 50 px;
+    letter-spacing: 1px;
+ }
 /* edit */
+.edit-page-body {
+    background-image: url('https://images.unsplash.com/photo-1452423668729-43a98052d3ee?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTd8fHJlYXNkaW5nJTIwYSUyMGJvb2t8ZW58MHx8MHx8fDA%3D');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.edit-form {
+    background: rgba(255, 255, 255, 0.8);
+    padding: 100px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+.form-label {
+    display: block;
+    margin-bottom: 5px;
+}
+.form-input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.form-button {
+    background-color: rgb(42, 10, 10);
+    color:white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.form-button:hover {
+    background-color: #261604;
+}
 
 
 
